# adhan-scheduler

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: docker.yml  test.yml
adhan_scheduler/: check_prayer_times.py  config.py  environments.py  get_prayer_times.py  main.py  play_adhan.py  prayer_times.py  schedule_adhan.py  scheduler.py
adhan_scheduler/config_files/: config.py  environments.py
static/css/: main.css  setup.css
templates/: index.html  setup.html
tests/: test_get_prayer_times.py  test_play_adhan.py  test_prayer_times.py  test_schedule_adhan.py  test_scheduler.py
