[tool.poetry]
name = "adhan-scheduler"
version = "0.1.0"
description = ""
authors = ["Luckman Ali <luckman.ali@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
soco = "^0.21.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
