[tool.poetry]
name = "adhan-scheduler"
version = "0.1.0"
description = ""
authors = ["Luckman Ali"]

[tool.poetry.dependencies]
python = "^3.8"
soco = "^0.21.1"
python-crontab = "^2.5.1"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.14.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
